[package]
name = "curve-v3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roots = "0.0.7"
franklin_crypto = { package = "franklin-crypto", version = "0.0.5", git = "https://github.com/zk-liangliang/franklin-crypto.git", branch="beta", features = ["multicore", "plonk"]}
lazy_static = "1.4.0"

[dependencies.primitive-types]
version = "0.9"
features = ["byteorder", "rustc-hex"]
default-features = false